2008-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/SystemAssemblyService.cs: Don't install packages provided
	  by add-ins that already exist in the system.

2008-02-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.ProgressMonitoring/ConsoleProgressStatus.cs: Allow
	  specifying the log level.

2008-02-15  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Core/Runtime.cs: Only pinvoke libc on unix.

2008-02-15  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Core.Execution/ProcessService.cs: Disable .NET remoting 
	security on the TCP channel.

2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/Properties.cs: Improve performance of Get method.

2008-02-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs: Add a WaitForOutput overload
	  with a time limit.

2008-02-04  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/Runtime.cs: Use MD's config directory for addin engine
	  too. More cross-platform safe, and ensures that they're always the same
	  directory (previously, unusual combinations of environment variables
	  could cause them to differ).
	* MonoDevelop.Core/PropertyService.cs: Make config directory more
	  cross-platform safe.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.addin.xml: Update MD version.

2008-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/GettextCatalog.cs: Fix logic that determines the location
	  of locale directory.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/FileService.cs: Make NotifyFileChanged safer against
	  exceptions.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.ProgressMonitoring/NullProgressMonitor.cs: Added new
	  override.
	* MonoDevelop.Core/Runtime.cs: Use a version specific default MD add-in
	  repo.

2008-01-17  Michael Hutchinson  <mhutchinson@novell.com> 
