@@ -80,6 +80,7 @@
     <File name="MonoDevelop.Core.Logging/ConsoleLogger.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Core.Logging/FileLogger.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Core/DefaultAddinLocalizer.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.Core.Logging/ConsoleCrayon.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
